--- a/stock_report/views/stock_report_views.xml
+++ b/stock_report/views/stock_report_views.xml
@@ -15,87 +15,90 @@
                                     <t t-set="qty" t-value="1"/>
                                 </t>
 
-                                    <t t-foreach="range(Math.ceil(qty * move_line.product_id.etiquetas))" t-as="item">
-                                        <t t-translation="off">
+                                <t t-foreach="range(int(qty * move_line.product_id.etiquetas))" t-as="item">
+                                    <t t-translation="off">
 
-                                                <div style="display: inline-table; height: 15rem; width: 100%;">
-                                                    <table class="table table-bordered"
-                                                           style="border: 2px solid black;">
-                                                        <th class="table-active text-left" style="height:16rem;">
-                                                            <table class="table table-bordered">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>
-                                                                            <h2>Producto:</h2>
-                                                                        </th>
-                                                                        <th>
-                                                                            <h4>
-                                                                                <span t-field="move_line.product_id.display_name"/>
-                                                                            </h4>
-                                                                        </th>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <th>
-                                                                            <h2>Cantidad:</h2>
-                                                                        </th>
-                                                                        <th>
-                                                                            <h4>
-                                                                                <string>2 /</string>
-                                                                                <span t-field="move_line.qty_done"/>
-                                                                            </h4>
-                                                                        </th>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <th>
-                                                                            <h2>Viaje:</h2>
-                                                                        </th>
-                                                                        <th>
-                                                                            <h4>
-                                                                                <span t-field="picking.client_order_nro"/>
-                                                                            </h4>
-                                                                        </th>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <th>
-                                                                            <h2>Cliente:</h2>
-                                                                        </th>
-                                                                        <th>
-                                                                            <h4>
-                                                                                <span t-field="picking.partner_id"/>
-                                                                            </h4>
-                                                                        </th>
-                                                                    </tr>
-                                                                </thead>
-                                                            </table>
-                                                        </th>
-                                                        <t t-if="move_line.product_id.tracking == 'none'">
+                                        <div style="display: inline-table; height: 15rem; width: 100%;">
+                                            <table class="table table-bordered"
+                                                   style="border: 2px solid black;">
+                                                <th class="table-active text-left" style="height:16rem;">
+                                                    <table class="table table-bordered">
+                                                        <thead>
                                                             <tr>
-                                                                <td class="text-center align-middle"
-                                                                    style="height: 2rem;">
-                                                                    <t t-if="move_line.product_id.barcode">
-                                                                        <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', move_line.product_id.barcode, 600, 150)"
-                                                                             style="width:40%;height:2rem"
-                                                                             alt="Barcode"/>
-                                                                        <br/>
-                                                                        <span t-esc="move_line.product_id.barcode"/>
-                                                                        <br/>
-                                                                    </t>
-                                                                    <t t-else="">
-                                                                        <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', picking.name, 600, 150)"
-                                                                             style="width:40%;height:2rem"
-                                                                             alt="Barcode"/>
-                                                                        <br/>
-                                                                        <string>Órden Nro:</string>
-                                                                        <span t-field="picking.origin"/>
-                                                                    </t>
-                                                                </td>
+                                                                <th>
+                                                                    <h2>Producto:</h2>
+                                                                </th>
+                                                                <th>
+                                                                    <h4>
+                                                                        <span t-field="move_line.product_id.display_name"/>
+                                                                    </h4>
+                                                                </th>
                                                             </tr>
-                                                        </t>
+                                                            <tr>
+                                                                <th>
+                                                                    <h2>Cantidad:</h2>
+                                                                </th>
+                                                                <th>
+                                                                    <h4>
+                                                                        <span t-field="move_line.product_id.qty_of"/>
+                                                                        <string> / </string>
+                                                                        <span t-field="move_line.qty_done"/>
+                                                                    </h4>
+                                                                </th>
+                                                            </tr>
+                                                            <tr>
+                                                                <th>
+                                                                    <h2>Viaje:</h2>
+                                                                </th>
+                                                                <th>
+                                                                    <h4>
+                                                                        <span t-field="picking.client_order_nro"/>
+                                                                    </h4>
+                                                                </th>
+                                                            </tr>
+                                                            <tr>
+                                                                <th>
+                                                                    <h2>Cliente:</h2>
+                                                                </th>
+                                                                <th>
+                                                                    <h4>
+                                                                        <span t-field="picking.partner_id"/>
+                                                                    </h4>
+                                                                </th>
+                                                            </tr>
+                                                        </thead>
                                                     </table>
-                                                </div>
+                                                </th>
+                                                <t t-if="move_line.product_id.tracking == 'none'">
+                                                    <tr>
+                                                        <td class="align-middle"
+                                                            style="height: 2rem;">
+                                                            <t t-if="move_line.product_id.barcode">
+                                                                <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', move_line.product_id.barcode, 600, 150)"
+                                                                     style="width:40%;height:2rem"
+                                                                     alt="Barcode"/>
+<!--                                                                <br/>-->
+                                                                <span t-esc="move_line.product_id.barcode"/>
+                                                                <br/>
+                                                            </t>
+                                                            <t t-else="">
+                                                                <img t-att-src="'/stock_report/static/src/img/image_name.png'"/>
+                                                            </t>
+                                                            <span class="text-right"/>
+                                                            <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('Code128', picking.name, 600, 150)"
+                                                                 style="width:40%;height:2rem"
+                                                                 alt="Barcode"/>
+<!--                                                            <br/>-->
+                                                            <string>Órden Nro:</string>
+                                                            <span t-field="picking.origin"/>
+                                                        </td>
+                                                    </tr>
+                                                </t>
+                                            </table>
+                                        </div>
 
-                                        </t>
                                     </t>
+                                </t>
 
                             </t>
                         </t>
